--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,12 @@ dependencies:
   intl: any
   provider: ^6.1.5+1
   go_router: ^16.2.1
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.14.4
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -96,3 +97,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/wet_go_logo.png"
+  remove_alpha_ios: true
