--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.5+1
   go_router: ^16.2.1
   dio: ^5.9.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
