--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ dependencies:
   go_router: ^16.2.1
   dio: ^5.9.0
   jwt_decoder: ^2.0.1
+  qr_flutter: ^4.1.0
+  screenshot: ^3.0.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  image_picker: ^1.2.0
+  qr_code_tools: ^0.2.0
+  mobile_scanner: ^7.0.1
 
 dev_dependencies:
   flutter_test:
