--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   image_picker: ^1.2.0
   qr_code_tools: ^0.2.0
   mobile_scanner: ^7.0.1
+  excel: ^4.0.6
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_test:
